# microsoft-news

./: .env.example  BACKLOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: .env.example  pyproject.toml
backend/analysis/: __init__.py  __main__.py  config.py
backend/analysis/agents/: __init__.py  tools.py
backend/analysis/models/: __init__.py  report.py  report_run.py
backend/analysis/pipeline/: __init__.py  analyzer.py  deep_scraper.py  enrichment.py  orchestrator.py  writer.py
backend/analysis/prompts/: analysis.py  enrichment.py  enrichment.yml  writing.py
backend/analysis/utils/: __init__.py  content_parser.py  json_parser.py
backend/api/: app.py  deps.py  schemas.py
backend/api/routers/: reports.py  sources.py  stats.py  updates.py
backend/ingest/: __init__.py  __main__.py  engine.py  enums.py
backend/ingest/db/: session.py
backend/ingest/db/migrations/: env.py
backend/ingest/db/migrations/versions/: a91f2278c4c0_initial_tables_sources_updates_ingest_.py  af1a588bcca2_add_reports_and_report_runs_tables.py  c3a7b9d1e5f2_add_title_ko_and_summary_ko_to_updates.py
backend/ingest/models/: __init__.py  ingest_run.py  source.py  update.py
backend/ingest/scrapers/: __init__.py  azure_blog.py  github_blog.py  microsoft_blog.py  tech_community.py
backend/ingest/utils/: dedup.py  http.py  monitoring.py  parsing.py
backend/tests/: conftest.py  test_api.py  test_enrichment.py
frontend/: .env.example  package-lock.json
frontend/src/: app.html
src/analysis/: __main__.py
src/ingest/: __main__.py  config.py  engine.py  seed.py
(+20 files in other folders)
